--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,35 +85,24 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-
-.benefit-lead {
+/* As i did below, please scroll down my code and look for the modications i did to the CSS by consolidating similar margins at the **** marks. */
+.benefit-lead,.benefit-brand,.benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
+}  
 }
-
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
+.benefit-brand {   
 }
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
+.benefit-cost {  
 }
-
-.benefit-lead h3 {
+/* **** */
+.benefit-lead h3,.benefit-brand h3,.benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-
 .benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
 }
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
+.benefit-cost h3 {    
 }
 
 .benefit-lead img {
@@ -133,8 +122,8 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
-
-.search-engine-optimization {
+/* **** */
+.search-engine-optimization,.online-reputation-management,.social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -144,21 +133,11 @@ p {
 }
 
 .online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
+  
 }
 
 .social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
+ 
 }
 
 .search-engine-optimization img {
