--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,34 +90,14 @@ p {
     margin-bottom: 32px;
     color: #ffffff;
 }  
-}
-.benefit-brand {   
-}
-.benefit-cost {  
-}
 /* **** */
 .benefit-lead h3,.benefit-brand h3,.benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-.benefit-brand h3 {
-}
-.benefit-cost h3 {    
-}
 
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
+/* **** */
+.benefit-lead img,.benefit-brand img,.benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
@@ -131,40 +111,14 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-
-.online-reputation-management {
-  
-}
-
-.social-media-marketing {
- 
-}
-
-.search-engine-optimization img {
+/* **** */
+.search-engine-optimization img,.online-reputation-management img,.social-media-marketing img
+ {
     max-height: 200px; 
 }
 
-
-.online-reputation-management img {
-    max-height: 200px;
-    
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
+/* **** */
+.search-engine-optimization h2,.online-reputation-management h2,.social-media-marketing {
     margin-bottom: 20px;
     font-size: 36px;
 }
