--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,8 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-/* As i did below, please scroll down my code and look for the modications i did to the CSS by consolidating similar margins at the **** marks. */
+/* As i did below, please scroll down my code and look for the modications i did to the CSS by consolidating similar margins at the **** marks. 
+by doing this, i have made the file smaller and easier to read over.*/
 .benefit-lead,.benefit-brand,.benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
